overhauling the menu into tables and grids and adding requests for food items. Want to try splitting the drinks into multiple tables and applying global css to help with the td alignment like what I did for the food menu

--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -7,250 +7,260 @@
 </div>
 
 <!-- Grid for Tables -->
-<div class="grid grid-cols-1 md:grid-cols-3 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
-  <!-- Coffee -->
-  <table class="text-left col-span-2 row-span-2 mb-6 mr-6">
-    <!-- head -->
-    <thead>
-      <tr>
-        <th><h2 class="text-6xl">Coffee</h2></th>
-      </tr>
-      <tr>
-        <th>Fair Trade · Organic</th>
-      </tr>
-    </thead>
+<!-- Drinks -->
+<!-- Drip Brew -->
+<table class="text-left col-span-2 row-span-2 mb-6 mr-6">
+  <!-- head -->
+  <thead>
+    <tr>
+      <th><h2 class="text-6xl pl-0">Menu</h2></th>
+    </tr>
+    <tr>
+      <th><h2 class="text-5xl">Drinks</h2></th>
+    </tr>
+  </thead>
     <tbody>
+    <tr>
+      <th class="pb-2">Proudly serving Bichota coffee</th>
+    </tr>
+    <tr>
+      <th class="pb-2">Help us reduce waste! While all of our to-go cups are compostable, we encourage you to bring your own mug</th>
+    </tr>
+    <tr class="mb-4">
+      <th class="text-xl font-bold">Drink Sizes</th>
+      <td class="text-lg font-bold">12oz</td>
+      <td class="text-lg font-bold">16oz</td>
+      <td class="text-lg font-bold">20oz</td>
+    </tr>
+    <tr>
+      <th><h3 class="text-3xl pl-0">Drip Brew</h3></th>
+    </tr>
       <tr>
-        <th>Espresso</th>
-        <td>2.75</td>
-        <td>3.25</td>
-        <td>3.75</td>
-      </tr>
-      <tr>
-        <th>Americano</th>
-        <td>2.75</td>
-        <td>3.25</td>
-        <td>3.75</td>
-      </tr>
-      <tr>
-        <th>Depth Charge</th>
-        <td>3.50</td>
-        <td>4.00</td>
-        <td>4.00</td>
-      </tr>
-      <tr>
-        <th>Cappucino</th>
-        <td>4.25</td>
-        <td>4.75</td>
-        <td>5.25</td>
-      </tr>
-      <tr>
-        <th>Latte</th>
-        <td>4.00</td>
-        <td>4.25</td>
-        <td>4.75</td>
-      </tr>
-      <tr>
-        <th>Breve</th>
-        <td>4.50</td>
-        <td>5.00</td>
-        <td>5.50</td>
-      </tr>
-      <tr>
-        <th>Mocha</th>
-        <td>4.50</td>
-        <td>5.00</td>
-        <td>5.50</td>
-      </tr>
-      <tr>
-        <th>Caramel Latte</th>
-        <td>4.50</td>
-        <td>5.00</td>
-        <td>5.50</td>
-      </tr>
-      <tr>
-        <th>Miel</th>
-        <td>4.25</td>
-        <td>4.75</td>
-        <td>5.25</td>
-      </tr>
-      <tr>
-        <th>Vietnamese</th>
-        <td>4.50</td>
-        <td>5.00</td>
-        <td>5.50</td>
-      </tr>
-      <tr>
-        <th>Chai Tea</th>
-        <td>4.50</td>
-        <td>4.25</td>
-        <td>4.75</td>
-      </tr>
-      <tr>
-        <th>Cold Press</th>
-        <td>4.50</td>
-        <td>5.00</td>
-        <td>5.50</td>
-      </tr>
-      <tr>
-        <th>Hot Chocolate / Steamer</th>
+        <td>To Go</td>
         <td>3.00</td>
         <td>3.50</td>
-        <td>4.00</td>
+        <td>4.25</td>
       </tr>
       <tr>
-        <th>Cortado</th>
+        <td>8oz mug</td>
+        <td></td>
+        <td>2.00</td>
       </tr>
+      <tr>
+        <td>Unlimited</td>
+        <td></td>
+        <td>3.00</td>
+      </tr>
+<!-- Espresso -->
+    <tr>
+      <th><h3 class="text-3xl pl-0">Espresso Bar</h3></th>
+    </tr>
+    <tr>
+      <th>Espresso</th>
+      <td>2.75</td>
+      <td>3.25</td>
+      <td>3.75</td>
+    </tr>
+    <tr>
+      <th>Americano</th>
+      <td>2.75</td>
+      <td>3.25</td>
+      <td>3.75</td>
+    </tr>
+    <tr>
+      <th>Depth Charge</th>
+      <td>3.50</td>
+      <td>4.00</td>
+      <td>4.00</td>
+    </tr>
+    <tr>
+      <th>Cappucino</th>
+      <td>4.25</td>
+      <td>4.75</td>
+      <td>5.25</td>
+    </tr>
+    <tr>
+      <th>Latte</th>
+      <td>4.00</td>
+      <td>4.25</td>
+      <td>4.75</td>
+    </tr>
+    <tr>
+      <th>Breve</th>
+      <td>4.50</td>
+      <td>5.00</td>
+      <td>5.50</td>
+    </tr>
+    <tr>
+      <th>Mocha</th>
+      <td>4.50</td>
+      <td>5.00</td>
+      <td>5.50</td>
+    </tr>
+    <tr>
+      <th>Caramel Latte</th>
+      <td>4.50</td>
+      <td>5.00</td>
+      <td>5.50</td>
+    </tr>
+    <tr>
+      <th>Miel</th>
+      <td>4.25</td>
+      <td>4.75</td>
+      <td>5.25</td>
+    </tr>
+    <tr>
+      <th>Vietnamese</th>
+      <td>4.50</td>
+      <td>5.00</td>
+      <td>5.50</td>
+    </tr>
+    <tr>
+      <th>Chai Tea</th>
+      <td>4.50</td>
+      <td>4.25</td>
+      <td>4.75</td>
+    </tr>
+    <tr>
+      <th>Cold Press</th>
+      <td>4.50</td>
+      <td>5.00</td>
+      <td>5.50</td>
+    </tr>
+    <tr>
+      <th>Hot Chocolate / Steamer</th>
+      <td>3.00</td>
+      <td>3.50</td>
+      <td>4.00</td>
+    </tr>
+    <tr>
+      <th>Cortado</th>
+    </tr>
+    <tr>
+      <th><h3 class="text-3xl pl-0">Teas and Other Drinks</h3></th>
+    </tr>
+    <tr>
+      <th>Black, Green, and Herbal looseleaf from TeaSource</th>
+    </tr>
+    <tr>
+      <th>Chai</th>
+    </tr>
+    <tr>
+      <th>Lemonade (with seasonal varieties)</th>
+    </tr>
+    <tr>
+      <th>Hot Chocolate / Steamer</th>
+    </tr>
     </tbody>
-  </table>
-  <!-- Drink sizes -->
-  <table class="text-left col-span-2 md:col-span-1 mb-6">
-    <!-- head -->
-    <thead>
-      <tr>
-        <th><h3 class="text-3xl pl-0">Drink Sizes</h3></th>
-      </tr>
-    </thead>
-      <tbody>
-        <tr>
-          <td>12oz</td>
-          <td>16oz</td>
-          <td>20oz</td>
-        </tr>
-        <tr>
-          <td>Small</td>
-          <td>Medium</td>
-          <td>Large</td>
-        </tr>
-        <tr>
-          <td>Hot</td>
-          <td>or</td>
-          <td>Iced</td>
-        </tr>
-      </tbody>
-  </table>
-  <!-- Drip Brew -->
-  <table class="text-left col-span-2 md:col-span-1 mb-6">
-    <!-- head -->
-    <thead>
-      <tr>
-        <th><h3 class="text-3xl pl-0">Drip Brew</h3></th>
-      </tr>
-    </thead>
-      <tbody>
-        <tr>
-          <td>To Go</td>
-          <td>3.00</td>
-          <td>3.50</td>
-          <td>4.25</td>
-        </tr>
-        <tr>
-          <td>8oz mug</td>
-          <td></td>
-          <td>2.30</td>
-        </tr>
-        <tr>
-          <td>Unlimited</td>
-          <td></td>
-          <td>3.00</td>
-        </tr>
-      </tbody>
-  </table>
-    <!-- Drip Brew -->
-    <table class="text-left col-span-2 md:col-span-1 mb-6">
-      <!-- head -->
-      <thead>
-        <tr>
-          <th><h3 class="text-3xl pl-0">Drip Brew</h3></th>
-        </tr>
-      </thead>
-        <tbody>
-          <tr>
-            <td>To Go</td>
-            <td>3.00</td>
-            <td>3.50</td>
-            <td>4.25</td>
-          </tr>
-          <tr>
-            <td>8oz mug</td>
-            <td></td>
-            <td>2.30</td>
-          </tr>
-          <tr>
-            <td>Unlimited</td>
-            <td></td>
-            <td>3.00</td>
-          </tr>
-        </tbody>
-    </table>
-</div>
-<!--  
+</table>
 
-  <div class="">
-    <h3>Other Drinks</h3>
-    <h4>Tea</h4>
-    <h5>Black</h5>
-    <ul>
-      <li>English Breakfast</li>
-      <li>Earl Grey</li>
-    </ul>
-    <h5>Green</h5>
-    <ul>
-      <li>Organic Green</li>
-      <li>Ginger Lemongrass</li>
-      <li>Jasmine</li>
-    </ul>
-    <h5>Herbal</h5>
-    <ul>
-      <li>Mint</li>
-      <li>Rooibos</li>
-      <li>Chamomile</li>
-      <li>Lemon Red</li>
-      <li>Red Berry Hibiscus</li>
-    </ul>
-  </div> -->
+<h2 class="text-6xl pl-0">Food</h2>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:w-100/100 lg:max-w-340 w-90/100 max-w-360 food-menu">
+<table class="text-left mb-6 mr-6">
+  <!-- head -->
+  <thead>
+    <tr>
+      <th><h3 class="text-2xl">Quiche</h3></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Broccoli Cheddar</th>
+      <td>7.50</td>
+    </tr>
+    <tr>
+      <th>Spinach and Ricotta Quiche </th>
+      <td>7.50</td>
+    </tr>
+    <tr>
+      <th>Bacon and Swiss Quiche</th>
+      <td>8.00</td>
+    </tr>
+  </tbody>
+</table>
+<table class="text-left mb-6 mr-6">
+  <!-- head -->
+  <thead>
+    <tr>
+      <th><h3 class="text-2xl">Sandwiches</h3></th>
+    </tr>
+    <tr>
+      <th>Breakfast sandwich</th>
+      <td>9.25</td>
+    </tr>
+    <tr>
+      <th>Turkey Provolone Sandwich</th>
+      <td>9.25</td>
+    </tr>
+  </thead>
+  <tbody>
 
-<!-- Menu Grid -->
-<div class="grid grid-cols-1 md:grid-cols-2 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 m-auto">
-  <div class="menu col-span-full pl-0">
-    <h2 class="text-6xl pl-0">Menu</h2>
-  </div>  
-  <div class="quiche row-span-2 pb-6">
-    <h3 class="text-2xl">Quiche: $7.50</h3>
-    <ul>
-      <li>
-        Broccoli Cheddar
-      </li>
-    </ul>
-  </div>
-  <div class="breakfast-sandwich pb-6">
-    <h3 class="text-2xl">Breakfast Sandwich: $9.25</h3>
-    <p>On sourdough bread</p>
-    <div class="grid grid-cols-1 md:grid-cols-3">
-      <p>Veggie Sausage Egg and Cheddar</p>
-      <p class="md:text-center">OR</p>
-      <p>Ham Egg and Swiss</p>
-    </div>
-  </div>
-  <div class="breakfast-burrito pb-6">
-    <h3 class="text-2xl">Breakfast Burrito: $7.75</h3>
-    <p>
-      Potato, scrambled eggs, veggies, monterey jack cheese
-      and sour cream served with ranchero sauce and corn
-      chips
-    </p>
-  </div>
-  <div class="turkey">
-    <h3 class="text-2xl">Turkey Provolone Sandwich: $9.25</h3>
-  </div>
-  <div class="black-bean-burrito">
-    <h3 class="text-2xl">Black Bean Burrito: $7.00</h3>
-    <p>
-      Seasoned black beans, jasmine rice and monterey jack
-      cheese <br/>
-      ❤️ Vegan option available ❤️ <br/>
-      Served with corn chips and salsa
-    </p>
-  </div>
-</div>
+  </tbody>
+</table>
+<table class="text-left mb-6 mr-6">
+  <!-- head -->
+  <thead>
+    <tr>
+      <th><h3 class="text-2xl">Rotating flavors</h3></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Pizza</th>
+      <td>6.00</td>
+    </tr>
+    <tr>
+      <th>Topped Focaccia</th>
+    </tr>
+  </tbody>
+</table>
+<table class="text-left mb-6 mr-6">
+  <!-- head -->
+  <thead>
+    <tr>
+      <th><h3 class="text-2xl">Seasonal rotating lunches</h3></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Soups</th>
+      <td>5.00</td>
+    </tr>
+    <tr>
+      <th>Deli Salads</th>
+      <td>6.50</td>
+    </tr>
+  </tbody>
+</table>
+<table class="text-left mb-6 mr-6">
+  <!-- head -->
+  <thead>
+    <tr>
+      <th><h3 class="text-2xl">Burritos</h3></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Breakfast Burrito</th>
+      <td>7.75</td>
+    </tr>
+    <tr>
+      <th>Black Bean Burrito (❤️ Vegan option available ❤️)</th>
+      <td>7.00</td>
+    </tr>
+  </tbody>
+</table>
+<table class="text-left mb-6 mr-6">
+  <!-- head -->
+  <thead>
+    <tr>
+      <th><h3 class="text-2xl">Everything Else</h3></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Granola</th>
+    </tr>
+  </tbody>
+</table>
 </div>
