--- a/server/pb_hooks/pages/assets/style.css
+++ b/server/pb_hooks/pages/assets/style.css
@@ -45,4 +45,8 @@
 h1, h2, h3, h4, h5, h6, .font-heading {
     font-family: var(--heading-font-family);
 }
+
+.food-menu td {
+    text-align: right;
+}
   
