--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -18,7 +18,7 @@
   </thead>
   <tbody>
     <tr class="mb-4">
-      <th class="text-xl font-bold">Drink Sizes</th>
+      <th class="text-xl font-bold w-3/5">Drink Sizes</th>
       <td class="text-lg font-bold">12oz</td>
       <td class="text-lg font-bold">16oz</td>
       <td class="text-lg font-bold">20oz</td>
@@ -35,7 +35,7 @@
   </thead>
   <tbody>
       <tr>
-        <th>To Go</th>
+        <th class="w-3/5">To Go</th>
         <td>3.00</td>
         <td>3.50</td>
         <td>4.25</td>
@@ -61,7 +61,7 @@
   </thead>
   <tbody>
     <tr>
-      <th>Espresso</th>
+      <th class="w-3/5">Espresso</th>
       <td>2.75</td>
       <td>3.25</td>
       <td>3.75</td>
@@ -150,7 +150,7 @@
     </thead>
     <tbody>
     <tr>
-      <th>Black, Green, and Herbal looseleaf from TeaSource</th>
+      <th class="w-3/5">Black, Green, and Herbal looseleaf from TeaSource</th>
     </tr>
     <tr>
       <th>Chai</th>
