add the 3/5 width to all the th tags that need it

--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -175,7 +175,7 @@
     </thead>
     <tbody>
       <tr>
-        <th>Broccoli Cheddar</th>
+        <th class="w-3/5">Broccoli Cheddar</th>
         <td>7.50</td>
       </tr>
       <tr>
@@ -197,7 +197,7 @@
     </thead>
     <tbody>
       <tr>
-        <th>Breakfast sandwich</th>
+        <th class="w-3/5">Breakfast sandwich</th>
         <td>9.25</td>
       </tr>
       <tr>
@@ -215,7 +215,7 @@
     </thead>
     <tbody>
       <tr>
-        <th>Pizza</th>
+        <th class="w-3/5">Pizza</th>
         <td>6.00</td>
       </tr>
       <tr>
@@ -232,7 +232,7 @@
     </thead>
     <tbody>
       <tr>
-        <th>Soups</th>
+        <th class="w-3/5">Soups</th>
         <td>5.00</td>
       </tr>
       <tr>
@@ -250,7 +250,7 @@
     </thead>
     <tbody>
       <tr>
-        <th>Breakfast Burrito</th>
+        <th class="w-3/5">Breakfast Burrito</th>
         <td>7.75</td>
       </tr>
       <tr>
@@ -268,7 +268,7 @@
     </thead>
     <tbody>
       <tr>
-        <th>Granola</th>
+        <th class="w-3/5">Granola</th>
       </tr>
     </tbody>
   </table>
