line up the menu tables with the upper text

--- a/server/pb_hooks/pages/assets/style.css
+++ b/server/pb_hooks/pages/assets/style.css
@@ -16,6 +16,10 @@
         border: none;
     }
 
+     & :where(th) {
+        padding-inline: 0;
+     }
+
     & :where(thead, tfoot) {
         color: var(--color-base-content);
     }
