fix mobile overflow-x issues by making everything table-fixed in mobile view

--- a/server/pb_hooks/pages/+layout.ejs
+++ b/server/pb_hooks/pages/+layout.ejs
@@ -11,7 +11,7 @@
 </head>
 <body class="flex flex-col items-center min-h-screen">
     <%- include('global-header.ejs') %>
-    <main class="flex flex-col flex-1 rounded-box border-y py-8 px-8 w-90/100 max-w-360 pb-24">
+    <main class="flex flex-col flex-1 rounded-box border-y py-8 px-4 md:px-8 w-90/100 max-w-360 pb-24">
     <%- slot %>
     </main>
     <%- include('global-footer.ejs') %>
