--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -13,7 +13,7 @@
 <p class="pb-2">Help us reduce waste! While all of our to-go cups are compostable, we encourage you to bring your own mug</p>
 
 <!-- Drink sizes -->
-<table class="table home-menu">
+<table class="table home-menu table-fixed md:table-auto">
   <thead>
   </thead>
   <tbody>
@@ -26,16 +26,18 @@
   </tbody>
 </table>
 <!-- Drip Brew -->
-<table class="table home-menu">
+<table class="table home-menu table-fixed md:table-auto">
   <!-- head -->
   <thead>
     <tr>
-      <th><h3 class="text-3xl pl-0">Drip Brew</h3></th>
+      <th class="w-3/5">
+        <h3 class="text-3xl pl-0">Drip Brew</h3>
+      </th>
     </tr>
   </thead>
   <tbody>
       <tr>
-        <th class="w-3/5">To Go</th>
+        <th>To Go</th>
         <td>3.00</td>
         <td>3.50</td>
         <td>4.25</td>
@@ -53,15 +55,17 @@
       </tbody>
   
 <!-- Espresso -->
- <table class="table home-menu">
+ <table class="table home-menu table-fixed md:table-auto">
   <thead>
     <tr>
-      <th><h3 class="text-3xl pl-0">Espresso Bar</h3></th>
+      <th class="w-3/5">
+        <h3 class="text-3xl pl-0">Espresso Bar</h3>
+      </th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th class="w-3/5">Espresso</th>
+      <th>Espresso</th>
       <td>2.75</td>
       <td>3.25</td>
       <td>3.75</td>
@@ -142,15 +146,17 @@
       <th>Cortado</th>
     </tbody>
     </table>
-    <table class="table home-menu">
+    <table class="table home-menu table-fixed md:table-auto">
       <thead>
-    <tr>
-      <th><h3 class="text-3xl pl-0">Teas and Other Drinks</h3></th>
-    </tr>
+        <tr>
+          <th class="w-3/5">
+            <h3 class="text-3xl pl-0">Teas and Other Drinks</h3>
+          </th>
+        </tr>
     </thead>
     <tbody>
     <tr>
-      <th class="w-3/5">Black, Green, and Herbal looseleaf from TeaSource</th>
+      <th>Black, Green, and Herbal looseleaf from TeaSource</th>
     </tr>
     <tr>
       <th>Chai</th>
@@ -166,16 +172,18 @@
 
 <h2 class="text-6xl pl-0">Food</h2>
 <div class="grid grid-cols-1 md:grid-cols-2 lg:w-100/100 lg:max-w-340 w-90/100 max-w-360">
-  <table class="table home-menu">
+  <table class="table home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
-        <th><h3 class="text-2xl">Quiche</h3></th>
+        <th class="w-3/5">
+          <h3 class="text-2xl">Quiche</h3>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th class="w-3/5">Broccoli Cheddar</th>
+        <th>Broccoli Cheddar</th>
         <td>7.50</td>
       </tr>
       <tr>
@@ -188,16 +196,18 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu">
+  <table class="table home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
-        <th><h3 class="text-2xl">Sandwiches</h3></th>
+        <th class="w-3/5">
+          <h3 class="text-2xl">Sandwiches</h3>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th class="w-3/5">Breakfast sandwich</th>
+        <th>Breakfast sandwich</th>
         <td>9.25</td>
       </tr>
       <tr>
@@ -206,16 +216,18 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu">
+  <table class="table home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
-        <th><h3 class="text-2xl">Rotating flavors</h3></th>
+        <th class="w-3/5">
+          <h3 class="text-2xl">Rotating flavors</h3>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th class="w-3/5">Pizza</th>
+        <th>Pizza</th>
         <td>6.00</td>
       </tr>
       <tr>
@@ -223,16 +235,18 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu">
+  <table class="table home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
-        <th><h3 class="text-2xl">Seasonal rotating lunches</h3></th>
+        <th class="w-3/5">
+          <h3 class="text-2xl">Seasonal rotating lunches</h3>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th class="w-3/5">Soups</th>
+        <th>Soups</th>
         <td>5.00</td>
       </tr>
       <tr>
@@ -241,16 +255,18 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu">
+  <table class="table home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
-        <th><h3 class="text-2xl">Burritos</h3></th>
+        <th class="w-3/5">
+          <h3 class="text-2xl">Burritos</h3>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th class="w-3/5">Breakfast Burrito</th>
+        <th>Breakfast Burrito</th>
         <td>7.75</td>
       </tr>
       <tr>
@@ -259,16 +275,18 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu">
+  <table class="table home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
-        <th><h3 class="text-2xl">Everything Else</h3></th>
+        <th class="w-3/5">
+          <h3 class="text-2xl">Everything Else</h3>
+        </th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th class="w-3/5">Granola</th>
+        <th>Granola</th>
       </tr>
     </tbody>
   </table>
