delete drink sizes

--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -12,27 +12,17 @@
 <p class="pb-2">Proudly serving Bichota coffee</p>
 <p class="pb-2">Help us reduce waste! While all of our to-go cups are compostable, we encourage you to bring your own mug</p>
 
-<!-- Drink sizes -->
-<table class="table home-menu table-fixed md:table-auto">
-  <thead>
-  </thead>
-  <tbody>
-    <tr class="mb-4">
-      <th class="text-xl font-bold w-3/5">Drink Sizes</th>
-      <td class="text-lg font-bold">12oz</td>
-      <td class="text-lg font-bold">16oz</td>
-      <td class="text-lg font-bold">20oz</td>
-    </tr>
-  </tbody>
-</table>
 <!-- Drip Brew -->
 <table class="table home-menu table-fixed md:table-auto">
   <!-- head -->
   <thead>
     <tr>
-      <th class="w-3/5">
+      <th class="w-1/2 md:w-3/5">
         <h3 class="text-3xl pl-0">Drip Brew</h3>
       </th>
+      <td class="text-lg font-bold">12oz</td>
+      <td class="text-lg font-bold">16oz</td>
+      <td class="text-lg font-bold">20oz</td>
     </tr>
   </thead>
   <tbody>
@@ -58,9 +48,12 @@
  <table class="table home-menu table-fixed md:table-auto">
   <thead>
     <tr>
-      <th class="w-3/5">
-        <h3 class="text-3xl pl-0">Espresso Bar</h3>
+      <th class="w-1/2 md:w-3/5">
+        <h3 class="text-3xl pl-0">Espresso</h3>
       </th>
+      <td class="text-lg font-bold">12oz</td>
+      <td class="text-lg font-bold">16oz</td>
+      <td class="text-lg font-bold">20oz</td>
     </tr>
   </thead>
   <tbody>
@@ -149,7 +142,7 @@
     <table class="table home-menu table-fixed md:table-auto">
       <thead>
         <tr>
-          <th class="w-3/5">
+          <th class="w-1/2 md:w-3/5">
             <h3 class="text-3xl pl-0">Teas and Other Drinks</h3>
           </th>
         </tr>
@@ -176,7 +169,7 @@
     <!-- head -->
     <thead>
       <tr>
-        <th class="w-3/5">
+        <th class="w-1/2 md:w-3/5">
           <h3 class="text-2xl">Quiche</h3>
         </th>
       </tr>
@@ -200,7 +193,7 @@
     <!-- head -->
     <thead>
       <tr>
-        <th class="w-3/5">
+        <th class="w-1/2 md:w-3/5">
           <h3 class="text-2xl">Sandwiches</h3>
         </th>
       </tr>
@@ -220,7 +213,7 @@
     <!-- head -->
     <thead>
       <tr>
-        <th class="w-3/5">
+        <th class="w-1/2 md:w-3/5">
           <h3 class="text-2xl">Rotating flavors</h3>
         </th>
       </tr>
@@ -239,7 +232,7 @@
     <!-- head -->
     <thead>
       <tr>
-        <th class="w-3/5">
+        <th class="w-1/2 md:w-3/5">
           <h3 class="text-2xl">Seasonal rotating lunches</h3>
         </th>
       </tr>
@@ -259,7 +252,7 @@
     <!-- head -->
     <thead>
       <tr>
-        <th class="w-3/5">
+        <th class="w-1/2 md:w-3/5">
           <h3 class="text-2xl">Burritos</h3>
         </th>
       </tr>
@@ -279,7 +272,7 @@
     <!-- head -->
     <thead>
       <tr>
-        <th class="w-3/5">
+        <th class="w-1/2 md:w-3/5">
           <h3 class="text-2xl">Everything Else</h3>
         </th>
       </tr>
