better spacing on the menu

--- a/server/pb_hooks/pages/assets/style.css
+++ b/server/pb_hooks/pages/assets/style.css
@@ -16,8 +16,9 @@
         border: none;
     }
 
-    & :where(th) {
+    & :where(th, td) {
         padding-inline: 0;
+        padding-block: 0.50rem;
      }
 
     & :where(thead, tfoot) {
