--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -13,7 +13,7 @@
 <p class="pb-2">Help us reduce waste! While all of our to-go cups are compostable, we encourage you to bring your own mug</p>
 
 <!-- Drip Brew -->
-<table class="table home-menu table-fixed md:table-auto">
+<table class="table mb-6 home-menu table-fixed md:table-auto">
   <!-- head -->
   <thead>
     <tr>
@@ -45,7 +45,7 @@
       </tbody>
   
 <!-- Espresso -->
- <table class="table home-menu table-fixed md:table-auto">
+ <table class="table mb-6 home-menu table-fixed md:table-auto">
   <thead>
     <tr>
       <th class="w-1/2 md:w-3/5">
@@ -139,7 +139,7 @@
       <th>Cortado</th>
     </tbody>
     </table>
-    <table class="table home-menu table-fixed md:table-auto">
+    <table class="table mb-6 home-menu table-fixed md:table-auto">
       <thead>
         <tr>
           <th class="w-1/2 md:w-3/5">
@@ -164,8 +164,8 @@
 </table>
 
 <h2 class="text-6xl pl-0">Food</h2>
-<div class="grid grid-cols-1 md:grid-cols-2 lg:w-100/100 lg:max-w-340 w-90/100 max-w-360">
-  <table class="table home-menu table-fixed md:table-auto">
+<div class="grid gap-x-22 grid-cols-1 md:grid-cols-2 w-100/100">
+  <table class="table mb-6 home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
@@ -189,7 +189,7 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu table-fixed md:table-auto">
+  <table class="table mb-6 home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
@@ -209,7 +209,7 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu table-fixed md:table-auto">
+  <table class="table mb-6 home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
@@ -228,7 +228,7 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu table-fixed md:table-auto">
+  <table class="table mb-6 home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
@@ -248,7 +248,7 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu table-fixed md:table-auto">
+  <table class="table mb-6 home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
@@ -268,7 +268,7 @@
       </tr>
     </tbody>
   </table>
-  <table class="table home-menu table-fixed md:table-auto">
+  <table class="table mb-6 home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
