better sizing on the cup sizes

--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -20,9 +20,9 @@
       <th class="w-1/2 md:w-3/5">
         <h3 class="text-3xl pl-0">Drip Brew</h3>
       </th>
-      <td class="text-lg font-bold">12oz</td>
-      <td class="text-lg font-bold">16oz</td>
-      <td class="text-lg font-bold">20oz</td>
+      <td class="text-md font-bold">12oz</td>
+      <td class="text-md font-bold">16oz</td>
+      <td class="text-md font-bold">20oz</td>
     </tr>
   </thead>
   <tbody>
@@ -51,9 +51,9 @@
       <th class="w-1/2 md:w-3/5">
         <h3 class="text-3xl pl-0">Espresso</h3>
       </th>
-      <td class="text-lg font-bold">12oz</td>
-      <td class="text-lg font-bold">16oz</td>
-      <td class="text-lg font-bold">20oz</td>
+      <td class="text-md font-bold">12oz</td>
+      <td class="text-md font-bold">16oz</td>
+      <td class="text-md font-bold">20oz</td>
     </tr>
   </thead>
   <tbody>
