--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -1,4 +1,4 @@
-<h1 class="text-3xl md:text-6xl text-center mt-10">Open 7 Days a week - 7:00AM to 4:30PM</h1>
+<h2 class="text-3xl md:text-6xl text-center mt-10">Open 7 Days a week - 7:00AM to 4:30PM</h2>
 <div class="md:divider my-12">
   <div class="text-2xl font-heading md:text-4xl">Try our weekly specials!</div>
 </div>
@@ -7,9 +7,9 @@
 </div>
 
 <!-- Drinks -->
-<h2 class="text-6xl pl-0">Menu</h2>
+<h1 class="text-8xl pl-0">Menu</h1>
 <h3 class="text-5xl">Drinks</h3>
-<p class="pb-2">Proudly serving Bichota coffee</p>
+<p>Proudly serving Bichota coffee</p>
 <p class="pb-2">Help us reduce waste! While all of our to-go cups are compostable, we encourage you to bring your own mug</p>
 
 <!-- Drip Brew -->
@@ -18,7 +18,7 @@
   <thead>
     <tr>
       <th class="w-1/2 md:w-3/5">
-        <h3 class="text-3xl pl-0">Drip Brew</h3>
+        <h4 class="text-3xl pl-0">Drip Brew</h4>
       </th>
       <td class="text-md font-bold">12oz</td>
       <td class="text-md font-bold">16oz</td>
@@ -49,7 +49,7 @@
   <thead>
     <tr>
       <th class="w-1/2 md:w-3/5">
-        <h3 class="text-3xl pl-0">Espresso</h3>
+        <h4 class="text-3xl pl-0">Espresso</h4>
       </th>
       <td class="text-md font-bold">12oz</td>
       <td class="text-md font-bold">16oz</td>
@@ -163,14 +163,14 @@
     </tbody>
 </table>
 
-<h2 class="text-6xl pl-0">Food</h2>
+<h3 class="text-5xl pl-0">Food</h3>
 <div class="grid gap-x-22 grid-cols-1 md:grid-cols-2 w-100/100">
   <table class="table mb-6 home-menu table-fixed md:table-auto">
     <!-- head -->
     <thead>
       <tr>
         <th class="w-1/2 md:w-3/5">
-          <h3 class="text-2xl">Quiche</h3>
+          <h4 class="text-2xl">Quiche</h4>
         </th>
       </tr>
     </thead>
@@ -194,7 +194,7 @@
     <thead>
       <tr>
         <th class="w-1/2 md:w-3/5">
-          <h3 class="text-2xl">Sandwiches</h3>
+          <h4 class="text-2xl">Sandwiches</h4>
         </th>
       </tr>
     </thead>
@@ -214,7 +214,7 @@
     <thead>
       <tr>
         <th class="w-1/2 md:w-3/5">
-          <h3 class="text-2xl">Rotating flavors</h3>
+          <h4 class="text-2xl">Rotating flavors</h4>
         </th>
       </tr>
     </thead>
@@ -233,7 +233,7 @@
     <thead>
       <tr>
         <th class="w-1/2 md:w-3/5">
-          <h3 class="text-2xl">Seasonal rotating lunches</h3>
+          <h4 class="text-2xl">Seasonal rotating lunches</h4>
         </th>
       </tr>
     </thead>
@@ -253,7 +253,7 @@
     <thead>
       <tr>
         <th class="w-1/2 md:w-3/5">
-          <h3 class="text-2xl">Burritos</h3>
+          <h4 class="text-2xl">Burritos</h4>
         </th>
       </tr>
     </thead>
@@ -273,7 +273,7 @@
     <thead>
       <tr>
         <th class="w-1/2 md:w-3/5">
-          <h3 class="text-2xl">Everything Else</h3>
+          <h4 class="text-2xl">Everything Else</h4>
         </th>
       </tr>
     </thead>
