--- a/server/pb_hooks/pages/index.ejs
+++ b/server/pb_hooks/pages/index.ejs
@@ -2,9 +2,9 @@
 <div class="md:divider my-12">
   <div class="text-2xl font-heading md:text-4xl">Try our weekly specials!</div>
 </div>
-<div class="w-1/1 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 md:m-auto">
-  <%- include('specials.ejs') %>
-</div>
+
+<!-- The specials come in a carousel -->
+<%- include('specials.ejs') %>
 
 <!-- Grid for Tables -->
 <div class="grid grid-cols-1 md:grid-cols-3 lg:w-85/100 lg:max-w-340 w-90/100 max-w-360 md:m-auto">
